--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="css/style2.css">
 </head>
 <body>
-<div class="hero">
+<section class="hero">
     <div class="container clearfix">
         <div class="hero-left"></div>
         <div class="hero-logo">
@@ -25,8 +25,9 @@
         <a href="#">contact</a>
     </nav>
     <h1 class="title">Sensitive wedding photography</h1>
-</div> <!--  hero  -->
+</section> <!--  hero  -->
 
+<section class="stories">
 <div class="container text-center">
     <div class="flbox"></div>
     <h2 class="unna subtitle">Some wedding stories of my couples</h2>
@@ -98,5 +99,135 @@
 <a href="#" class="btn unna">
     see more history
 </a>
+</section>
+<!--  container1  -->
+
+<section class="whoami">
+    <div class="container">
+        <div class="row">
+            <div class="leftbox">
+                <img src="images2/camera01.webp" alt="aboutme" class="aboutme">
+                <img src="images2/camera02.webp" alt="aboutme" class="aboutme2">
+            </div>
+            <div class="rightbox">
+                <h1 class="unna">
+                    Hi I m Andrew<br/>
+                    and I'm a wedding photographer
+                </h1>
+                <p>제1항의 해임건의는 국회재적의원 3분의 1 이상의 발의에 의하여 국회재적의원 과반수의 찬성이 있어야 한다. 국회의원은 국회에서 직무상 행한 발언과 표결에 관하여 국회외에서 책임을 지지 아니한다. 형사피해자는 법률이 정하는 바에 의하여 당해 사건의 재판절차에서 진술할 수 있다. 모든 국민은 행위시의 법률에 의하여 범죄를 구성하지 아니하는 행위로 소추되지 아니하며,</p>
+                <p>사회적 특수계급의 제도는 인정되지 아니하며, 어떠한 형태로도 이를 창설할 수 없다. 탄핵소추의 의결을 받은 자는 탄핵심판이 있을 때까지 그 권한행사가 정지된다. 국가는 사회보장·사회복지의 증진에 노력할 의무를 진다. 이 헌법시행 당시의 법령과 조약은 이 헌법에 위배되지 아니하는 한 그 효력을 지속한다. 대한민국은 민주공화국이다. 국무위원은 국정에 관하여 대통령을 보좌하며, 국무회의의 구성원으로서 국정을 심의한다. 대법원은 법률에 저촉되지 아니하는 범위안에서 소송에 관한 절차, 법원의 내부규율과</p>
+                <a href="#" class="btn unna">
+                    More about me
+                </a>
+            </div>
+        </div>
+    </div>
+</section>
+<!--  container2  -->
+
+<section class="packages">
+    <div class="container text-center">
+        <div class="flbox"></div>
+        <h2 class="unna subtitle">Wedding photography packages</h2>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <div class="package-box">
+                    <div class="inner">
+                       <img src="images2/wedding01.jpg" alt="01"/>
+                    </div>
+                </div>
+                <h1 class="text-center unna">Wedding reportage</h1>
+                <p class="text-center">Sed do eiusmod tempor incididunt ut
+                    labore et dolore magna aliqua.
+                    At volutpat diam ut venenatis tellus in. Volutpat diam ut venenatis tellus in. Scelerisque fermentum dui faucibus in ornare quam viverra orci. Interdum
+                    velit laoreet id donec ultrices.</p>
+                <p class="text-center aurore">4000 $</p>
+            </div>
+            <div class="col">
+                <div class="package-box">
+                    <div class="inner">
+                       <img src="images2/wedding02.jpg" alt="02"/>
+                    </div>
+                </div>
+                <h1 class="text-center unna">Honeymoon session</h1>
+                <p class="text-center">Sed do eiusmod tempor incididunt ut
+                    labore et dolore magna aliqua.
+                    At volutpat diam ut venenatis tellus in. Volutpat diam ut venenatis tellus in. Scelerisque fermentum dui faucibus in ornare quam viverra orci. Interdum
+                    velit laoreet id donec ultrices.</p>
+                <p class="text-center aurore">1500 $</p>
+            </div>
+            <div class="col">
+                <div class="package-box">
+                    <div class="inner">
+                       <img src="images2/wedding03.jpg" alt="03"/>
+                    </div>
+                </div>
+                <h1 class="text-center unna">Engagement session</h1>
+                <p class="text-center">Sed do eiusmod tempor incididunt ut
+                    labore et dolore magna aliqua.
+                    At volutpat diam ut venenatis tellus in. Volutpat diam ut venenatis tellus in. Scelerisque fermentum dui faucibus in ornare quam viverra orci. Interdum
+                    velit laoreet id donec ultrices.</p>
+                <p class="text-center aurore">500 $</p>
+            </div>
+        </div>
+    </div>
+    <a href="#" class="btn unna">
+        Find out more about available packages
+    </a>
+</section>
+<!--  container3  -->
+
+<section class="banner">
+    <div class="container clearfix">
+    </div>
+    <h1 class="title">Let's create something special together, aprat, you.... and your love.</h1>
+</section> 
+<!--  container4  -->
+
+<section class="banner2">
+    <div class="container clearfix">
+       <img src="images2/banner2.webp" alt="02" id="banner">
+       <div class="banner2_box">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Faucibus pulvinar elementum integer enim neque volutpat ac. Lorem dolor sed viverra ipsum nunc aliquet bibendum. Sed tempus urna et pharetra pharetra massa massa ultricies. Integer malesuada nunc vel risus commodo viverra maecenas accumsan. Eget est lorem ipsum dolor sit. Nunc mi ipsum faucibus vitae aliquet.</p>
+          <p class="text-center aurore">Eva & Jack</p>
+       </div>
+       <img src="images2/banner2_1.gif" alt="02_1" id="">
+       <a href="#" class="btn unna">
+           see more options
+       </a>
+    </div>
+</section> 
+<!--  container5  -->
+
+<footer>
+    <div class="container clearfix">
+        <div class="footer_con">
+          <div class="footer_logo">
+            <h1 class="text-center aurore">My Wedding's</h1>
+            <p class="text-center unns">wedding photography</p>
+          </div>
+          <div class="footer_sns">
+            <a href="#" alt="facebook"><img src="images2/facebook.png"></a>
+            <a href="#" alt="instagram"><img src="images2/insta.png"></a>
+          </div>
+          <div class="adress">
+            <a href="#" alt="email">karolnowicki@weddingphotography.com</a>
+            <p class="phonenumber">+48 505 606 707</p>
+          </div>
+        </div>
+    </div>  <!--container-->
+
+    <nav class="container">
+        <a href="#">history</a>
+        <a href="#">offer</a>
+        <a href="#">options</a>
+        <a href="#">about me</a>
+        <a href="#">contact</a>
+    </nav>
+</footer>
+
+
 </body>
 </html>
